--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1> <span>Skip</span> The Diet,</h1>
-    <h1>Just Eat Healthy</h1>
-    <h1>With Food Network</h1>
-    <p>Imagine you don't need a diet because we provide healthy and delocious food for you!</p>
-    <button>Order Food</button>
+    <section>
+        <div class="left">
+            <h1> <span>Skip</span> The Diet,<br>
+            Just Eat Healthy<br>
+            With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide healthy and delocious food for you!</p>
+            <button>Order Food</button>
+        </div>
+        <div class="right">
+            <img src="photo/Group 8425.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
