--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
             <h1> <span>Skip</span> The Diet,<br>
             Just Eat Healthy<br>
             With Food Network</h1>
-            <p>Imagine you don't need a diet because we provide healthy and delocious food for you!</p>
-            <button>Order Food</button>
+            <p>Imagine you don't need a diet because we provide healthy and delocious food for you!</p> <br>
+            <a href="www.foodpanda.com.bd" target="blank">Order Food</a>
         </div>
         <div class="right">
             <img src="photo/Group 8425.png" alt="">
+        </div>
+    </section>
+    <section class="no2">
+        <div class="left">
+           <img src="photo/Person Image.png" alt="">
         </div>
     </section>
 </body>
