--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
         </div>
     </section>
     <section class="no2">
+        
         <div class="left">
-           <img src="photo/Person Image.png" alt="">
+           <img src="photo/Person Image.png" alt="" id="person">
+        </div>
+        <div class="right">
+            <h2 id="amh">About Me</h2>
+            <p id="parame">Mesopotamia (Arabic: بِلَاد ٱلرَّافِدَيْن‎ Bilād ar-Rāfidayn; Ancient Greek: Μεσοποταμία; Classical Syriac: ܐܪܡ ܢܗܪ̈ܝܢ Ārām-Nahrīn or ܒܝܬ ܢܗܪ̈ܝܢ Bēṯ Nahrīn)[1] is a historical region of Western Asia situated within the Tigris–Euphrates river system, in the northern part of the Fertile Crescent. It occupies the area of present-day Iraq, and parts of Iran, Turkey, Syria and Kuwait.[2]The Sumerians and Akkadians (including Assyrians and Babylonians) dominated Mesopotamia from the beginning of written history (c. 3100 BC) to the fall of Babylon in 539 BC, when it was conquered by the Achaemenid Empire.
+            </p>
+            <a href="www.facebook.com">Contact me</a>
         </div>
     </section>
 </body>
