Heading my recipies

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
+    <section id="sec">
         <div class="left">
             <h1> <span>Skip</span> The Diet,<br>
             Just Eat Healthy<br>
@@ -19,7 +19,7 @@
             <img src="photo/Group 8425.png" alt="">
         </div>
     </section>
-    <section class="no2">
+    <section class="no2" id="sec">
         
         <div class="left">
            <img src="photo/Person Image.png" alt="" id="person">
@@ -30,6 +30,10 @@
             </p>
             <a href="www.facebook.com">Contact me</a>
         </div>
+    </section>
+    <section>
+        <h2 id="writting">My Recipes</h2>
+        <p id="writting">The Sumerians and Akkadians (including Assyrians and Babylonians) dominated Mesopotamia from the beginning of written history (c. 3100 BC) to the fall of Babylon in 539 BC, when it was conquered by the Achaemenid Empire.</p>
     </section>
 </body>
 </html>
