--- a/index.html
+++ b/index.html
@@ -34,21 +34,23 @@
         <section>
             <h2 id="writting">My Recipes</h2>
             <p id="writting">The Sumerians and Akkadians (including Assyrians and Babylonians) dominated Mesopotamia from the beginning of written history (c. 3100 BC) to the fall of Babylon in 539 BC, when it was conquered by the Achaemenid Empire.</p>
-            <div class="last-food">
-                <img src="photo/Project Cover.jpg" id="food1">
-                <h3>Biscute</h3>
-                <p>Osmosis (/ɒzˈmoʊsɪs/, US also /ɒs-/)[1] is the spontaneous net movement or diffusion of solvent molecules through a selectively permeable membrane from a region of high water potential (region of lower solute concentration) to a region of low water potential (region of higher solute concentration),[2] in the direction that tends to equalize the solute concentrations on the two sides.[3][4][5]</p>
-            </div>
-            <div class="food-lasst">
-                <img src="photo/Project Cover1.jpg" id="food1">
-                <h3>Meat</h3>
-                <p>Diffusion is the net movement of anything (for example, atoms, ions, molecules, energy) from a region of higher concentration to a region of lower concentration. Diffusion is driven by a gradient in concentration.</p>
-            </div>
-            <div class="food-last">
-                <img src="photo/Project Cover.png" id="food1">
-                <h3>Soup</h3>
-                <p>Pirates of the Caribbean: The Curse of the Black Pearl is a 2003 American fantasy swashbuckler film directed by Gore Verbinski and the first film in the Pirates of the Caribbean film series. Produced by Walt Disney Pictures and Jerry Bruckheimer, the film is based on Walt Disney's Pirates of the Caribbean attraction at Disney theme parks.[3]</p>
-            </div>
+            <div class="dure">
+                <div class="last-food">
+                    <img src="photo/Project Cover.jpg" id="food1">
+                    <h3>Biscute</h3>
+                    <p>Osmosis (/ɒzˈmoʊsɪs/, US also /ɒs-/)[1] is the spontaneous net movement or diffusion of solvent molecules through a selectively permeable membrane from a region of high water potential (region of lower solute concentration) to a region of low water potential (region of higher solute concentration),[2] in the direction that tends to equalize the solute concentrations on the two sides.[3][4][5]</p>
+                </div>
+                <div class="food-lasst">
+                    <img src="photo/Project Cover1.jpg" id="food1">
+                    <h3>Meat</h3>
+                    <p>Diffusion is the net movement of anything (for example, atoms, ions, molecules, energy) from a region of higher concentration to a region of lower concentration. Diffusion is driven by a gradient in concentration.</p>
+                </div>
+                <div class="food-last">
+                    <img src="photo/Project Cover.png" id="food1">
+                    <h3>Soup</h3>
+                    <p>Pirates of the Caribbean: The Curse of the Black Pearl is a 2003 American fantasy swashbuckler film directed by Gore Verbinski and the first film in the Pirates of the Caribbean film series. Produced by Walt Disney Pictures and Jerry Bruckheimer, the film is based on Walt Disney's Pirates of the Caribbean attraction at Disney theme parks.[3]</p>
+                </div>
+            </div> 
         </section>
     </body>
 </html>
